--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.11.0",
+    "echarts": "^6.0.0",
+    "lucide-react": "^0.535.0",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-barcode": "^1.6.1",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-select": "^5.10.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
